--- a/frontend/src/app/components/Sidebar/Sidebar.module.css
+++ b/frontend/src/app/components/Sidebar/Sidebar.module.css
@@ -1,10 +1,11 @@
 .mainContainer {
   background-color: #f4f4f4;
   padding: 1rem;
-  border-radius: 8px;
+  /* border-radius: 8px; */
   font-family: sans-serif;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05); */
   max-width: 200px;
+  height: 100vh;
 }
 
 .title {
